# perspective

./: .gitignore  .yarnrc.yml  azure-pipelines.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
cmake/: re2.txt.in
cmake/arrow/: CMakeLists.txt
cpp/perspective/: CMakeLists.txt  build.js  package.json
cpp/perspective/src/cpp/: arrow_loader.cpp  computed_expression.cpp  emscripten.cpp  (+11 more)
cpp/protos/: perspective.proto
docs/: package.json
examples/blocks/: package.json
examples/python-starlette/: server.py
examples/python-tornado/: server.py
examples/remote-workspace/: package.json
examples/rust-axum/: Cargo.toml
examples/rust-axum/src/: index.html  main.rs
examples/tornado-python/: index.html
examples/webpack-cross-origin/: package.json
python/perspective/: pyproject.toml  requirements-311.txt  requirements-37.txt  requirements-38.txt  requirements-39.txt  setup.py
rust/bootstrap/: main.rs
rust/bootstrap-runtime/: lib.rs
rust/bundle/: main.rs
rust/perspective/: Cargo.toml
rust/perspective-client/: Cargo.toml
rust/perspective-python/: Cargo.toml  dev-requirements.txt  pyproject.toml
rust/perspective-python/perspective/: __init__.py  convenience.py  legacy.py
rust/perspective-python/src/: lib.rs
rust/perspective-server/: Cargo.toml  build.rs
rust/perspective-server/include/: server.h
rust/perspective-server/src/: ffi.rs  lib.rs  server.cpp
rust/perspective-viewer/: package.json
rust/perspective/src/: lib.rs
scripts/: build_js.js  clean.js  install_tools.js  script_utils.js  start.js  test_js.js
tools/perspective-scripts/: install_emsdk.mjs  sh_perspective.mjs
tools/perspective-test/: playwright.config.ts
(+89 files in other folders)
